[metadata]
name = dtelegram-error-alerter
version = 1.0.1
author = Boltayev Davronbek
author_email = tarjimatv1@gmail.com
maintainer = Davronbek
maintainer_email = davronbekboltayev777@gmail.com
description = Send error to telegram group via bot
url = https://github.com/firdavsDev
license = MIT
keywords = sms, python, api, sending, sending message, sending message, sending message api, sending error message api python, sending error api telegram
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = T
packages = find:
